# pedaleira

./: .gitignore  CLAUDE.md  Makefile  README.md  base_index.html  full_gpt.html  gravando.py  index.html  list_devices.py  package.json  pedais_essenciais_mvp.md  progress.md  project_specification.md  pubspec.yaml  tocando.py  tocando_wave.py
android/app/: build.gradle.kts
experimentos/: robotize.py  teste_pyaudio.py
html/: effects.js  helpers.js  index.html  main.js
integration_test/: simple_test.dart
ios/Runner/: Info.plist
lib/: main.dart
linux/: CMakeLists.txt
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: engine_api.rs  mod.rs
rust/src/dsp/: boost.rs  chain.rs  chorus.rs  compressor.rs  delay.rs  distortion.rs  fuzz.rs  mod.rs  noise_gate.rs  overdrive.rs  params.rs  reverb.rs  smooth.rs  tremolo.rs
rust/src/engine/: handle.rs  mod.rs  runtime.rs
rust/tests/: boost_test.rs  chain_test.rs  chorus_test.rs  compressor_test.rs  delay_test.rs  distortion_test.rs  dsp_wav.rs  engine_runtime.rs  fuzz_test.rs  noise_gate_test.rs  overdrive_test.rs  render_all.rs  reverb_test.rs  tremolo_test.rs
rust_builder/: pubspec.yaml
src/: App.tsx
test/: file_preset_repository_test.dart  models_test.dart  mute_provider_test.dart  pedal_editor_screen_test.dart  pedal_tile_test.dart  pedalboard_notifier_test.dart  pedalboard_screen_test.dart  preset_bar_test.dart  preset_io_test.dart  preset_notifier_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+64 files in other folders)
