[package]
name = "rust_lib_pedaleira"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"

[dependencies.cpal]
version = "0.15"
features = []

[dev-dependencies]
approx = "0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
